# info-libros-catedu

./: .gitignore  Makefile  README.md  config.toml  docker-compose.yml  get_images.py  local.yml  prepare_csv.py  prepare_json.py  pyproject.toml  test.ipynb  webdata.csv  webdata.json
layouts/: index.html
layouts/_default/: home.html
static/css/: style.css
static/js/: myscripts.js
web/: index.html  index.xml  sitemap.xml
web/categories/: index.xml
web/tags/: index.xml
